# Bakery-hub

./: README.md  flet.yaml  main.py  pyproject.toml  ren_browser_pyproject.toml  requirements.txt
.github/workflows/: build.yml
ren/browser/: .gitignore  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  To-Do.md  flake.nix  main.py  pyproject.toml  pytest.ini
ren/browser/.gitea/workflows/: build.yml  safety.yml  test.yml
ren/browser/ren_browser/: app.py  logs.py  rns.py
ren/browser/ren_browser/announces/: announces.py
ren/browser/ren_browser/controls/: shortcuts.py
ren/browser/ren_browser/pages/: page_request.py
ren/browser/ren_browser/profiler/: profiler.py
ren/browser/ren_browser/renderer/: __init__.py  micron.py  plaintext.py
ren/browser/ren_browser/storage/: storage.py
ren/browser/ren_browser/tabs/: tabs.py
ren/browser/ren_browser/ui/: settings.py  ui.py
ren/browser/tests/: README.md  conftest.py
ren/browser/tests/integration/: test_app_integration.py
ren/browser/tests/unit/: test_announces.py  test_app.py  test_logs.py  test_page_request.py  test_renderers.py  test_shortcuts.py  test_storage.py  test_tabs.py  test_ui.py
