[project]
name = "reticulum-hub-browser"
version = "1.0.1"
description = "A Reticulum community hub browser for nomadnet micron pages."
authors = [
    {name = "eldeucebag"}
]
requires-python = ">=3.11"
dependencies = [
    "flet (>=0.21.0,<1.0.0)",
    "rnspure (>=1.1.3,<2.0.0)"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.flet]
exclude = ["watchdog"]

[tool.flet.android]
min_sdk_version = 24
target_sdk_version = 34

[tool.flet.android.permission]
"android.permission.INTERNET" = true
"android.permission.ACCESS_NETWORK_STATE" = true
"android.permission.WRITE_EXTERNAL_STORAGE" = true
"android.permission.READ_EXTERNAL_STORAGE" = true
