[project]
name = "ren-browser"
version = "0.3.0"
description = "A browser for the Reticulum Network."
authors = [
    {name = "Sudo-Ivan"}
]
module = "ren_browser.app"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "flet (>=0.80.0,<1.5.0)",
    "rns (>=1.1.3,<1.5.0)",
    "lxmf (>=0.9.4,<0.10.0)"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["ren_browser"]

[project.scripts]
ren-browser = "ren_browser.app:run"
ren-browser-web = "ren_browser.app:web"
ren-browser-android = "ren_browser.app:android"
ren-browser-ios = "ren_browser.app:ios"

[dependency-groups]
dev = [
    "ruff>=0.11.11,<1.0.0",
    "pytest>=8.4.2,<9.0.0",
    "pytest-cov>=7.0.0,<8.0.0",
    "pytest-mock>=3.15.1,<4.0.0",
    "pytest-asyncio>=1.2.0,<2.0.0"
]

[tool.flet]
exclude = ["watchdog"]

[tool.flet.flutter.pubspec.dependency_overrides]
webview_flutter_android = "4.10.1"

[tool.flet.android]
min_sdk_version = 21
target_sdk_version = 34

[tool.flet.android.permission]
"android.permission.INTERNET" = true
"android.permission.ACCESS_NETWORK_STATE" = true
"android.permission.ACCESS_WIFI_STATE" = true
"android.permission.WAKE_LOCK" = true
"android.permission.REQUEST_IGNORE_BATTERY_OPTIMIZATIONS" = true
"android.permission.FOREGROUND_SERVICE" = true
"android.permission.FOREGROUND_SERVICE_DATA_SYNC" = true

